PROYECTO 2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ini
Rule 1     ini -> PROGRAMA
Rule 2     PROGRAMA -> PROGRAMA INSTRUCCIONES
Rule 3     PROGRAMA -> INSTRUCCIONES
Rule 4     INSTRUCCIONES -> COMENTARIO
Rule 5     INSTRUCCIONES -> ASIGNACION
Rule 6     INSTRUCCIONES -> VECTOR
Rule 7     INSTRUCCIONES -> ACCESO
Rule 8     INSTRUCCIONES -> PRINT
Rule 9     INSTRUCCIONES -> IF
Rule 10    INSTRUCCIONES -> SWITCH
Rule 11    INSTRUCCIONES -> ESTRUCTURAS_ITERATIVAS
Rule 12    INSTRUCCIONES -> DATO pcoma
Rule 13    INSTRUCCIONES -> FUNCION
Rule 14    FUNCION -> TIPO identificador par_a PARAMETROS par_b llave_a CB llave_b
Rule 15    FUNCION -> TIPO identificador par_a par_b llave_a CB llave_b
Rule 16    PARAMETROS -> PARAMETROS PARAMETRO
Rule 17    PARAMETROS -> PARAMETRO
Rule 18    PARAMETRO -> PARAMETRO coma TIPO identificador
Rule 19    PARAMETRO -> <empty>
Rule 20    ESTRUCTURAS_ITERATIVAS -> reservada_while par_a DATO par_b llave_a CB llave_b
Rule 21    ESTRUCTURAS_ITERATIVAS -> reservada_do llave_a CB llave_b reservada_while par_a DATO par_b pcoma
Rule 22    ESTRUCTURAS_ITERATIVAS -> reservada_for par_a TIPO DATO igual DATO pcoma DATO pcoma DATO par_b llave_a CB llave_b
Rule 23    SWITCH -> reservada_switch par_a DATO par_b llave_a CASE reservada_default dpuntos CD llave_b
Rule 24    CASE -> CASE reservada_case DATO dpuntos CS
Rule 25    CASE -> reservada_case DATO dpuntos CS
Rule 26    CS -> CS BS
Rule 27    CS -> BS
Rule 28    BS -> COMENTARIO
Rule 29    BS -> ASIGNACION
Rule 30    BS -> VECTOR
Rule 31    BS -> ACCESO
Rule 32    BS -> PRINT
Rule 33    BS -> IF
Rule 34    BS -> SWITCH
Rule 35    BS -> reservada_break pcoma
Rule 36    BS -> ESTRUCTURAS_ITERATIVAS
Rule 37    CD -> CD BD
Rule 38    CD -> BD
Rule 39    BD -> COMENTARIO
Rule 40    BD -> ASIGNACION
Rule 41    BD -> VECTOR
Rule 42    BD -> ACCESO
Rule 43    BD -> PRINT
Rule 44    BD -> IF
Rule 45    BD -> SWITCH
Rule 46    BD -> reservada_break pcoma
Rule 47    BD -> ESTRUCTURAS_ITERATIVAS
Rule 48    IF -> reservada_if par_a DATO par_b llave_a CB llave_b reservada_else llave_a CBE llave_b
Rule 49    IF -> reservada_if par_a DATO par_b llave_a CB llave_b
Rule 50    IF -> reservada_if par_a DATO par_b llave_a CB llave_b reservada_else IF
Rule 51    CB -> CB BIF
Rule 52    CB -> BIF
Rule 53    BIF -> COMENTARIO
Rule 54    BIF -> ASIGNACION
Rule 55    BIF -> VECTOR
Rule 56    BIF -> ACCESO
Rule 57    BIF -> PRINT
Rule 58    BIF -> IF
Rule 59    BIF -> SWITCH
Rule 60    BIF -> reservada_return pcoma
Rule 61    BIF -> reservada_return DATO pcoma
Rule 62    BIF -> reservada_continue pcoma
Rule 63    BIF -> reservada_break pcoma
Rule 64    BIF -> ESTRUCTURAS_ITERATIVAS
Rule 65    CBE -> CBE BIF
Rule 66    CBE -> BIF
Rule 67    PRINT -> reservada_writeln par_a DATO par_b pcoma
Rule 68    COMENTARIO -> COMENTARIO1
Rule 69    COMENTARIO -> COMENTARIO2
Rule 70    COMENTARIO1 -> comentario_monolinea
Rule 71    COMENTARIO2 -> comentario_multilinea
Rule 72    VECTOR -> TIPO identificador cor_a cor_b igual reservada_new TIPO cor_a EXPRESION cor_b pcoma
Rule 73    VECTOR -> TIPO identificador cor_a cor_b igual llave_a VECTOR llave_b pcoma
Rule 74    VECTOR -> VECTOR coma DATO
Rule 75    VECTOR -> DATO
Rule 76    ACCESO -> identificador cor_a EXPRESION cor_b
Rule 77    ACCESO -> identificador cor_a EXPRESION cor_b igual DATO pcoma
Rule 78    ASIGNACION -> TIPO ASIGNACION igual DATO pcoma
Rule 79    ASIGNACION -> ASIGNACION igual DATO pcoma
Rule 80    ASIGNACION -> ASIGNACION coma identificador
Rule 81    ASIGNACION -> TIPO ASIGNACION pcoma
Rule 82    ASIGNACION -> identificador
Rule 83    DATO -> EXPRESION
Rule 84    DATO -> BOOLEAN
Rule 85    DATO -> dato_string
Rule 86    DATO -> dato_char
Rule 87    DATO -> TERNARIO
Rule 88    DATO -> ACCESO
Rule 89    TERNARIO -> BOOLEAN ternario DATO dpuntos DATO
Rule 90    TIPO -> tipo_int
Rule 91    TIPO -> tipo_char
Rule 92    TIPO -> tipo_double
Rule 93    TIPO -> tipo_boolean
Rule 94    TIPO -> tipo_string
Rule 95    TIPO -> reservada_void
Rule 96    EXPRESION -> EXPRESION suma EXPRESION
Rule 97    EXPRESION -> EXPRESION resta EXPRESION
Rule 98    EXPRESION -> EXPRESION multiplicacion EXPRESION
Rule 99    EXPRESION -> EXPRESION division EXPRESION
Rule 100   EXPRESION -> EXPRESION potencia EXPRESION
Rule 101   EXPRESION -> EXPRESION modulo EXPRESION
Rule 102   EXPRESION -> EXPRESION incremental
Rule 103   EXPRESION -> EXPRESION decremental
Rule 104   EXPRESION -> par_a EXPRESION par_b
Rule 105   EXPRESION -> NUM
Rule 106   NUM -> dato_int
Rule 107   NUM -> dato_double
Rule 108   NUM -> identificador
Rule 109   NUM -> dato_string
Rule 110   NUM -> dato_char
Rule 111   BOOLEAN -> BOOLEAN or BOOLEAN
Rule 112   BOOLEAN -> BOOLEAN and BOOLEAN
Rule 113   BOOLEAN -> BOOLEAN mayor_igual BOOLEAN
Rule 114   BOOLEAN -> BOOLEAN mayor_que BOOLEAN
Rule 115   BOOLEAN -> BOOLEAN menor_igual BOOLEAN
Rule 116   BOOLEAN -> BOOLEAN menor_que BOOLEAN
Rule 117   BOOLEAN -> BOOLEAN igualacion BOOLEAN
Rule 118   BOOLEAN -> BOOLEAN negacion BOOLEAN
Rule 119   BOOLEAN -> not BOOLEAN
Rule 120   BOOLEAN -> par_a BOOLEAN par_b
Rule 121   BOOLEAN -> reservada_false
Rule 122   BOOLEAN -> reservada_true
Rule 123   BOOLEAN -> identificador
Rule 124   BOOLEAN -> EXPRESION
Rule 125   BOOLEAN -> dato_string
Rule 126   BOOLEAN -> dato_char

Terminals, with rules where they appear

and                  : 112
coma                 : 18 74 80
comentario_monolinea : 70
comentario_multilinea : 71
cor_a                : 72 72 73 76 77
cor_b                : 72 72 73 76 77
dato_char            : 86 110 126
dato_double          : 107
dato_int             : 106
dato_string          : 85 109 125
decremental          : 103
division             : 99
dpuntos              : 23 24 25 89
error                : 
identificador        : 14 15 18 72 73 76 77 80 82 108 123
igual                : 22 72 73 77 78 79
igualacion           : 117
incremental          : 102
llave_a              : 14 15 20 21 22 23 48 48 49 50 73
llave_b              : 14 15 20 21 22 23 48 48 49 50 73
mayor_igual          : 113
mayor_que            : 114
menor_igual          : 115
menor_que            : 116
modulo               : 101
multiplicacion       : 98
negacion             : 118
not                  : 119
or                   : 111
par_a                : 14 15 20 21 22 23 48 49 50 67 104 120
par_b                : 14 15 20 21 22 23 48 49 50 67 104 120
pcoma                : 12 21 22 22 35 46 60 61 62 63 67 72 73 77 78 79 81
potencia             : 100
reservada_break      : 35 46 63
reservada_case       : 24 25
reservada_continue   : 62
reservada_default    : 23
reservada_do         : 21
reservada_else       : 48 50
reservada_false      : 121
reservada_for        : 22
reservada_if         : 48 49 50
reservada_new        : 72
reservada_return     : 60 61
reservada_switch     : 23
reservada_true       : 122
reservada_void       : 95
reservada_while      : 20 21
reservada_writeln    : 67
resta                : 97
suma                 : 96
ternario             : 89
tipo_boolean         : 93
tipo_char            : 91
tipo_double          : 92
tipo_int             : 90
tipo_string          : 94

Nonterminals, with rules where they appear

ACCESO               : 7 31 42 56 88
ASIGNACION           : 5 29 40 54 78 79 80 81
BD                   : 37 38
BIF                  : 51 52 65 66
BOOLEAN              : 84 89 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 120
BS                   : 26 27
CASE                 : 23 24
CB                   : 14 15 20 21 22 48 49 50 51
CBE                  : 48 65
CD                   : 23 37
COMENTARIO           : 4 28 39 53
COMENTARIO1          : 68
COMENTARIO2          : 69
CS                   : 24 25 26
DATO                 : 12 20 21 22 22 22 22 23 24 25 48 49 50 61 67 74 75 77 78 79 89 89
ESTRUCTURAS_ITERATIVAS : 11 36 47 64
EXPRESION            : 72 76 77 83 96 96 97 97 98 98 99 99 100 100 101 101 102 103 104 124
FUNCION              : 13
IF                   : 9 33 44 50 58
INSTRUCCIONES        : 2 3
NUM                  : 105
PARAMETRO            : 16 17 18
PARAMETROS           : 14 16
PRINT                : 8 32 43 57
PROGRAMA             : 1 2
SWITCH               : 10 34 45 59
TERNARIO             : 87
TIPO                 : 14 15 18 22 72 72 73 78 81
VECTOR               : 6 30 41 55 73 74
ini                  : 0

Parsing method: LALR

state 0

    (0) S' -> . ini
    (1) ini -> . PROGRAMA
    (2) PROGRAMA -> . PROGRAMA INSTRUCCIONES
    (3) PROGRAMA -> . INSTRUCCIONES
    (4) INSTRUCCIONES -> . COMENTARIO
    (5) INSTRUCCIONES -> . ASIGNACION
    (6) INSTRUCCIONES -> . VECTOR
    (7) INSTRUCCIONES -> . ACCESO
    (8) INSTRUCCIONES -> . PRINT
    (9) INSTRUCCIONES -> . IF
    (10) INSTRUCCIONES -> . SWITCH
    (11) INSTRUCCIONES -> . ESTRUCTURAS_ITERATIVAS
    (12) INSTRUCCIONES -> . DATO pcoma
    (13) INSTRUCCIONES -> . FUNCION
    (68) COMENTARIO -> . COMENTARIO1
    (69) COMENTARIO -> . COMENTARIO2
    (78) ASIGNACION -> . TIPO ASIGNACION igual DATO pcoma
    (79) ASIGNACION -> . ASIGNACION igual DATO pcoma
    (80) ASIGNACION -> . ASIGNACION coma identificador
    (81) ASIGNACION -> . TIPO ASIGNACION pcoma
    (82) ASIGNACION -> . identificador
    (72) VECTOR -> . TIPO identificador cor_a cor_b igual reservada_new TIPO cor_a EXPRESION cor_b pcoma
    (73) VECTOR -> . TIPO identificador cor_a cor_b igual llave_a VECTOR llave_b pcoma
    (74) VECTOR -> . VECTOR coma DATO
    (75) VECTOR -> . DATO
    (76) ACCESO -> . identificador cor_a EXPRESION cor_b
    (77) ACCESO -> . identificador cor_a EXPRESION cor_b igual DATO pcoma
    (67) PRINT -> . reservada_writeln par_a DATO par_b pcoma
    (48) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b reservada_else llave_a CBE llave_b
    (49) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b
    (50) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b reservada_else IF
    (23) SWITCH -> . reservada_switch par_a DATO par_b llave_a CASE reservada_default dpuntos CD llave_b
    (20) ESTRUCTURAS_ITERATIVAS -> . reservada_while par_a DATO par_b llave_a CB llave_b
    (21) ESTRUCTURAS_ITERATIVAS -> . reservada_do llave_a CB llave_b reservada_while par_a DATO par_b pcoma
    (22) ESTRUCTURAS_ITERATIVAS -> . reservada_for par_a TIPO DATO igual DATO pcoma DATO pcoma DATO par_b llave_a CB llave_b
    (83) DATO -> . EXPRESION
    (84) DATO -> . BOOLEAN
    (85) DATO -> . dato_string
    (86) DATO -> . dato_char
    (87) DATO -> . TERNARIO
    (88) DATO -> . ACCESO
    (14) FUNCION -> . TIPO identificador par_a PARAMETROS par_b llave_a CB llave_b
    (15) FUNCION -> . TIPO identificador par_a par_b llave_a CB llave_b
    (70) COMENTARIO1 -> . comentario_monolinea
    (71) COMENTARIO2 -> . comentario_multilinea
    (90) TIPO -> . tipo_int
    (91) TIPO -> . tipo_char
    (92) TIPO -> . tipo_double
    (93) TIPO -> . tipo_boolean
    (94) TIPO -> . tipo_string
    (95) TIPO -> . reservada_void
    (96) EXPRESION -> . EXPRESION suma EXPRESION
    (97) EXPRESION -> . EXPRESION resta EXPRESION
    (98) EXPRESION -> . EXPRESION multiplicacion EXPRESION
    (99) EXPRESION -> . EXPRESION division EXPRESION
    (100) EXPRESION -> . EXPRESION potencia EXPRESION
    (101) EXPRESION -> . EXPRESION modulo EXPRESION
    (102) EXPRESION -> . EXPRESION incremental
    (103) EXPRESION -> . EXPRESION decremental
    (104) EXPRESION -> . par_a EXPRESION par_b
    (105) EXPRESION -> . NUM
    (111) BOOLEAN -> . BOOLEAN or BOOLEAN
    (112) BOOLEAN -> . BOOLEAN and BOOLEAN
    (113) BOOLEAN -> . BOOLEAN mayor_igual BOOLEAN
    (114) BOOLEAN -> . BOOLEAN mayor_que BOOLEAN
    (115) BOOLEAN -> . BOOLEAN menor_igual BOOLEAN
    (116) BOOLEAN -> . BOOLEAN menor_que BOOLEAN
    (117) BOOLEAN -> . BOOLEAN igualacion BOOLEAN
    (118) BOOLEAN -> . BOOLEAN negacion BOOLEAN
    (119) BOOLEAN -> . not BOOLEAN
    (120) BOOLEAN -> . par_a BOOLEAN par_b
    (121) BOOLEAN -> . reservada_false
    (122) BOOLEAN -> . reservada_true
    (123) BOOLEAN -> . identificador
    (124) BOOLEAN -> . EXPRESION
    (125) BOOLEAN -> . dato_string
    (126) BOOLEAN -> . dato_char
    (89) TERNARIO -> . BOOLEAN ternario DATO dpuntos DATO
    (106) NUM -> . dato_int
    (107) NUM -> . dato_double
    (108) NUM -> . identificador
    (109) NUM -> . dato_string
    (110) NUM -> . dato_char

    identificador   shift and go to state 17
    reservada_writeln shift and go to state 19
    reservada_if    shift and go to state 21
    reservada_switch shift and go to state 22
    reservada_while shift and go to state 23
    reservada_do    shift and go to state 24
    reservada_for   shift and go to state 25
    dato_string     shift and go to state 27
    dato_char       shift and go to state 28
    comentario_monolinea shift and go to state 30
    comentario_multilinea shift and go to state 31
    tipo_int        shift and go to state 32
    tipo_char       shift and go to state 33
    tipo_double     shift and go to state 34
    tipo_boolean    shift and go to state 35
    tipo_string     shift and go to state 36
    reservada_void  shift and go to state 37
    par_a           shift and go to state 20
    not             shift and go to state 39
    reservada_false shift and go to state 40
    reservada_true  shift and go to state 41
    dato_int        shift and go to state 42
    dato_double     shift and go to state 43

    ini                            shift and go to state 1
    PROGRAMA                       shift and go to state 2
    INSTRUCCIONES                  shift and go to state 3
    COMENTARIO                     shift and go to state 4
    ASIGNACION                     shift and go to state 5
    VECTOR                         shift and go to state 6
    ACCESO                         shift and go to state 7
    PRINT                          shift and go to state 8
    IF                             shift and go to state 9
    SWITCH                         shift and go to state 10
    ESTRUCTURAS_ITERATIVAS         shift and go to state 11
    DATO                           shift and go to state 12
    FUNCION                        shift and go to state 13
    COMENTARIO1                    shift and go to state 14
    COMENTARIO2                    shift and go to state 15
    TIPO                           shift and go to state 16
    EXPRESION                      shift and go to state 18
    BOOLEAN                        shift and go to state 26
    TERNARIO                       shift and go to state 29
    NUM                            shift and go to state 38

state 1

    (0) S' -> ini .



state 2

    (1) ini -> PROGRAMA .
    (2) PROGRAMA -> PROGRAMA . INSTRUCCIONES
    (4) INSTRUCCIONES -> . COMENTARIO
    (5) INSTRUCCIONES -> . ASIGNACION
    (6) INSTRUCCIONES -> . VECTOR
    (7) INSTRUCCIONES -> . ACCESO
    (8) INSTRUCCIONES -> . PRINT
    (9) INSTRUCCIONES -> . IF
    (10) INSTRUCCIONES -> . SWITCH
    (11) INSTRUCCIONES -> . ESTRUCTURAS_ITERATIVAS
    (12) INSTRUCCIONES -> . DATO pcoma
    (13) INSTRUCCIONES -> . FUNCION
    (68) COMENTARIO -> . COMENTARIO1
    (69) COMENTARIO -> . COMENTARIO2
    (78) ASIGNACION -> . TIPO ASIGNACION igual DATO pcoma
    (79) ASIGNACION -> . ASIGNACION igual DATO pcoma
    (80) ASIGNACION -> . ASIGNACION coma identificador
    (81) ASIGNACION -> . TIPO ASIGNACION pcoma
    (82) ASIGNACION -> . identificador
    (72) VECTOR -> . TIPO identificador cor_a cor_b igual reservada_new TIPO cor_a EXPRESION cor_b pcoma
    (73) VECTOR -> . TIPO identificador cor_a cor_b igual llave_a VECTOR llave_b pcoma
    (74) VECTOR -> . VECTOR coma DATO
    (75) VECTOR -> . DATO
    (76) ACCESO -> . identificador cor_a EXPRESION cor_b
    (77) ACCESO -> . identificador cor_a EXPRESION cor_b igual DATO pcoma
    (67) PRINT -> . reservada_writeln par_a DATO par_b pcoma
    (48) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b reservada_else llave_a CBE llave_b
    (49) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b
    (50) IF -> . reservada_if par_a DATO par_b llave_a CB llave_b reservada_else IF
    (23) SWITCH -> . reservada_switch par_a DATO par_b llave_a CASE reservada_default dpuntos CD llave_b
    (20) ESTRUCTURAS_ITERATIVAS -> . reservada_while par_a DATO par_b llave_a CB llave_b
    (21) ESTRUCTURAS_ITERATIVAS -> . reservada_do llave_a CB llave_b reservada_while par_a DATO par_b pcoma
    (22) ESTRUCTURAS_ITERATIVAS -> . reservada_for par_a TIPO DATO igual DATO pcoma DATO pcoma DATO par_b llave_a CB llave_b
    (83) DATO -> . EXPRESION
    (84) DATO -> . BOOLEAN
    (85) DATO -> . dato_string
    (86) DATO -> . dato_char
    (87) DATO -> . TERNARIO
    (88) DATO -> . ACCESO
    (14) FUNCION -> . TIPO identificador par_a PARAMETROS par_b llave_a CB llave_b
    (15) FUNCION -> . TIPO identificador par_a par_b llave_a CB llave_b
    (70) COMENTARIO1 -> . comentario_monolinea
    (71) COMENTARIO2 -> . comentario_multilinea
    (90) TIPO -> . tipo_int
    (91) TIPO -> . tipo_char
    (92) TIPO -> . tipo_double
    (93) TIPO -> . tipo_boolean
    (94) TIPO -> . tipo_string
    (95) TIPO -> . reservada_void
    (96) EXPRESION -> . EXPRESION suma EXPRESION
    (97) EXPRESION -> . EXPRESION resta EXPRESION
    (98) EXPRESION -> . EXPRESION multiplicacion EXPRESION
    (99) EXPRESION -> . EXPRESION division EXPRESION
    (100) EXPRESION -> . EXPRESION potencia EXPRESION
    (101) EXPRESION -> . EXPRESION modulo EXPRESION
    (102) EXPRESION -> . EXPRESION incremental
    (103) EXPRESION -> . EXPRESION decremental
    (104) EXPRESION -> . par_a EXPRESION par_b
    (105) EXPRESION -> . NUM
    (111) BOOLEAN -> . BOOLEAN or BOOLEAN
    (112) BOOLEAN -> . BOOLEAN and BOOLEAN
    (113) BOOLEAN -> . BOOLEAN mayor_igual BOOLEAN
    (114) BOOLEAN -> . BOOLEAN mayor_que BOOLEAN
    (115) BOOLEAN -> . BOOLEAN menor_igual BOOLEAN
    (116) BOOLEAN -> . BOOLEAN menor_que BOOLEAN
    (117) BOOLEAN -> . BOOLEAN igualacion BOOLEAN
    (118) BOOLEAN -> . BOOLEAN negacion BOOLEAN
    (119) BOOLEAN -> . not BOOLEAN
    (120) BOOLEAN -> . par_a BOOLEAN par_b
    (121) BOOLEAN -> . reservada_false
    (122) BOOLEAN -> . reservada_true
    (123) BOOLEAN -> . identificador
    (124) BOOLEAN -> . EXPRESION
    (125) BOOLEAN -> . dato_string
    (126) BOOLEAN -> . dato_char
    (89) TERNARIO -> . BOOLEAN ternario DATO dpuntos DATO
    (106) NUM -> . dato_int
    (107) NUM -> . dato_double
    (108) NUM -> . identificador
    (109) NUM -> . dato_string
    (110) NUM -> . dato_char

    $end            reduce using rule 1 (ini -> PROGRAMA .)
    identificador   shift and go to state 17
    reservada_writeln shift and go to state 19
    reservada_if    shift and go to state 21
    reservada_switch shift and go to state 22
    reservada_while shift and go to state 23
    reservada_do    shift and go to state 24
    reservada_for   shift and go to state 25
    dato_string     shift and go to state 27
    dato_char       shift and go to state 28
    comentario_monolinea shift and go to state 30
    comentario_multilinea shift and go to state 31
    tipo_int        shift and go to state 32
    tipo_char       shift and go to state 33
    tipo_double     shift and go to state 34
    tipo_boolean    shift and go to state 35
    tipo_string     shift and go to state 36
    reservada_void  shift and go to state 37
    par_a           shift and go to state 20
    not             shift and go to state 39
    reservada_false shift and go to state 40
    reservada_true  shift and go to state 41
    dato_int        shift and go to state 42
    dato_double     shift and go to state 43

    INSTRUCCIONES                  shift and go to state 44
    COMENTARIO                     shift and go to state 4
    ASIGNACION                     shift and go to state 5
    VECTOR                         shift and go to state 6
    ACCESO                         shift and go to state 7
    PRINT                          shift and go to state 8
    IF                             shift and go to state 9
    SWITCH                         shift and go to state 10
    ESTRUCTURAS_ITERATIVAS         shift and go to state 11
    DATO                           shift and go to state 12
    FUNCION                        shift and go to state 13
    COMENTARIO1                    shift and go to state 14
    COMENTARIO2                    shift and go to state 15
    TIPO                           shift and go to state 16
    EXPRESION                      shift and go to state 18
    BOOLEAN                        shift and go to state 26
    TERNARIO                       shift and go to state 29
    NUM                            shift and go to state 38

state 3

    (3) PROGRAMA -> INSTRUCCIONES .

    identificador   reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_writeln reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_if    reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_switch reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_while reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_do    reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_for   reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    dato_string     reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    dato_char       reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    comentario_monolinea reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    comentario_multilinea reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    tipo_int        reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    tipo_char       reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    tipo_double     reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    tipo_boolean    reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    tipo_string     reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_void  reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    par_a           reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    not             reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_false reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    reservada_true  reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    dato_int        reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    dato_double     reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)
    $end            reduce using rule 3 (PROGRAMA -> INSTRUCCIONES .)


state 4

    (4) INSTRUCCIONES -> COMENTARIO .

    identificador   reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_writeln reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_if    reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_switch reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_while reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_do    reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_for   reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    dato_string     reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    dato_char       reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    comentario_monolinea reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    comentario_multilinea reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    tipo_int        reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    tipo_char       reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    tipo_double     reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    tipo_boolean    reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    tipo_string     reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_void  reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    par_a           reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    not             reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_false reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    reservada_true  reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    dato_int        reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    dato_double     reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)
    $end            reduce using rule 4 (INSTRUCCIONES -> COMENTARIO .)


state 5

    (5) INSTRUCCIONES -> ASIGNACION .
    (79) ASIGNACION -> ASIGNACION . igual DATO pcoma
    (80) ASIGNACION -> ASIGNACION . coma identificador

    identificador   reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_writeln reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_if    reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_switch reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_while reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_do    reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_for   reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    dato_string     reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    dato_char       reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    comentario_monolinea reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    comentario_multilinea reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    tipo_int        reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    tipo_char       reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    tipo_double     reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    tipo_boolean    reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    tipo_string     reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_void  reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    par_a           reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    not             reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_false reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    reservada_true  reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    dato_int        reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    dato_double     reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    $end            reduce using rule 5 (INSTRUCCIONES -> ASIGNACION .)
    igual           shift and go to state 45
    coma            shift and go to state 46


state 6

    (6) INSTRUCCIONES -> VECTOR .
    (74) VECTOR -> VECTOR . coma DATO

    identificador   reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_writeln reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_if    reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_switch reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_while reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_do    reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_for   reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    dato_string     reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    dato_char       reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    comentario_monolinea reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    comentario_multilinea reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    tipo_int        reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    tipo_char       reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    tipo_double     reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    tipo_boolean    reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    tipo_string     reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_void  reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    par_a           reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    not             reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_false reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    reservada_true  reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    dato_int        reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    dato_double     reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    $end            reduce using rule 6 (INSTRUCCIONES -> VECTOR .)
    coma            shift and go to state 47


state 7

    (7) INSTRUCCIONES -> ACCESO .
    (88) DATO -> ACCESO .

  ! reduce/reduce conflict for identificador resolved using rule 7 (INSTRUCCIONES -> ACCESO .)
